[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Explosion.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Animations/Explosion/Explosion_00.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Animations/Explosion/Explosion_02.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Animations/Explosion/Explosion_03.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Animations/Explosion/Explosion_04.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Animations/Explosion/Explosion_05.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Animations/Explosion/Explosion_06.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Animations/Explosion/Explosion_07.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Animations/Explosion/Explosion_08.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Animations/Explosion/Explosion_09.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Animations/Explosion/Explosion_10.png" type="Texture" id=11]
[ext_resource path="res://Sounds/SFX/Explosion.ogg" type="AudioStream" id=12]


[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="Explosion" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"
frame = 9
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 12 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="TimeToDie" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]

[connection signal="timeout" from="TimeToDie" to="." method="_on_TimeToDie_timeout"]


